--- a/.gitattributes
+++ b/.gitattributes
@@ -1,24 +1,31 @@
-# Normalize text files (cross-platform repo)
+# Normalize line endings: store text as LF in the repo
 * text=auto
 
-# Force LF in files used by Linux CI / tooling
-*.py     text eol=lf
-*.yml    text eol=lf
-*.yaml   text eol=lf
-*.md     text eol=lf
-*.txt    text eol=lf
-*.sh     text eol=lf
-*.ps1    text eol=lf
-justfile text eol=lf
+# Force LF for code/config/docs (avoid Windows CRLF surprises)
+*.py   text eol=lf
+*.ps1  text eol=lf
+*.psm1 text eol=lf
+*.psd1 text eol=lf
+*.md   text eol=lf
+*.txt  text eol=lf
+*.yml  text eol=lf
+*.yaml text eol=lf
+*.json text eol=lf
+*.toml text eol=lf
+*.ini  text eol=lf
+*.env  text eol=lf
+*.sh   text eol=lf
 
-# Windows-only scripts
-*.bat    text eol=crlf
-*.cmd    text eol=crlf
-
-# Binary files (do not touch)
-*.png    binary
-*.jpg    binary
-*.jpeg   binary
-*.gif    binary
-*.pdf    binary
-*.ico    binary
+# Common binaries
+*.png  binary
+*.jpg  binary
+*.jpeg binary
+*.gif  binary
+*.webp binary
+*.ico  binary
+*.pdf  binary
+*.zip  binary
+*.gz   binary
+*.7z   binary
+*.woff binary
+*.woff2 binary
